<resources>
    <string name="app_name">记记</string>
    <string name="login_slogan">嘿!\n赶紧登录吧!</string>
    <string name="sub_slogan">欢迎回来~我们等你好久了</string>
    <string name="login_mail">邮箱</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login">登录</string>
    <string name="password_check">记住密码</string>
    <string name="register_slogan">嘿!\n赶紧注册吧!</string>
    <string name="back">返回</string>
    <string name="register">注册</string>
</resources>