<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:title="@string/back"></androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <TextView
            android:layout_marginTop="121dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_slogan"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#343965">
        </TextView>
        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_slogan"
            android:textSize="12sp">
        </TextView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            app:cardCornerRadius="25dp"
            android:backgroundTint="#ECF2FF"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/user_rgt_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/login_username"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="14sp"></EditText>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="25dp"
            android:backgroundTint="#ECF2FF"
            app:cardElevation="0dp">
            <EditText
                android:id="@+id/pwd_rgt_edit"
                android:layout_width="match_parent"
                android:background="@null"
                android:hint="@string/login_password"
                android:textSize="14sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:inputType="textPassword"
                android:layout_height="match_parent">
            </EditText>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:backgroundTint="#585CE5"
            app:cardCornerRadius="25dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#585CE5"
                android:text="@string/register"
                android:textStyle="bold">
            </Button>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>