<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <TextView
            android:layout_marginTop="121dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_slogan"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#343965">
        </TextView>
        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_slogan"
            android:textSize="12sp">
        </TextView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            app:cardCornerRadius="25dp"
            android:backgroundTint="#ECF2FF"
            app:cardElevation="0dp">
            <EditText
                android:layout_width="match_parent"
                android:background="@null"
                android:hint="@string/login_username"
                android:textSize="14sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_height="match_parent">
            </EditText>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="25dp"
            android:backgroundTint="#ECF2FF"
            app:cardElevation="0dp">
            <EditText
                android:layout_width="match_parent"
                android:background="@null"
                android:hint="@string/login_password"
                android:textSize="14sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:inputType="textPassword"
                android:layout_height="match_parent">
            </EditText>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:backgroundTint="#585CE5"
            app:cardCornerRadius="25dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#585CE5"
                android:text="@string/login"
                android:textStyle="bold">
            </Button>
        </androidx.cardview.widget.CardView>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_check" />
        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_height="30dp"
            android:textColor="#343965"
            android:textSize="12sp"
            android:text="没有账户?立即注册">
        </TextView>
    </LinearLayout>
</LinearLayout>